force-app/main/default/objects/Cliente__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <label>Cidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>