force-app/main/default/objects/Cliente__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <externalId>true</externalId>
    <label>CPF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>