force-app/main/default/objects/Cliente__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereço</label>
    <length>100</length>
    <type>Text</type>
</CustomField>