force-app/main/default/objects/Cliente__c/fields/Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <length>50</length>
    <type>Text</type>
</CustomField>