force-app/main/default/objects/Cliente__c/fields/Sobrenome__c.field-meta.xml
<CustomField>
    <fullName>Sobrenome__c</fullName>
    <label>Sobrenome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>