force-app/main/default/objects/Cliente__c/fields/Status_Integracao__c.field-meta.xml
<CustomField>
    <fullName>Status_Integracao__c</fullName>
    <label>Status Integração</label>
    <length>100</length>
    <type>Text</type>
</CustomField>