force-app/main/default/objects/Cliente__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nome__c</columns>
    <columns>Sobrenome__c</columns>
    <columns>CPF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>